--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
+body {
+    max-width: 90%;
+    margin: 0 auto;
+}
+
+p {
+    font-family: sans-serif;
+    font-size: 15px;
+}
+
 a {
     padding: 0.25rem 0.125rem 0;
     text-decoration: none;
@@ -5,9 +15,32 @@ a {
     transition: all 150ms ease;
 }
 
+a:link {
+    color: #6a51e7;
+
+}
+
 a:hover {
     background-color: lightblue;
     color: #6a51e7;
     border-bottom: 3px solid blue;
+}
+
+a:visited {
+    color: brown;
+    border-bottom: 3px solid darkred;
+}
+
+a:active {
+    background-color: lightblue;
+    color: #6a51e7;
+    border-bottom: 3px solid blue;
+}
+
+.table {
+    max-width: 45%;
+    margin: 0 auto;
+    font-size: 160%;
 
 }
+/* give a slightly greyish colour to the background of the quotations */
