--- a/main.css
+++ b/main.css
@@ -1,23 +1,23 @@
 body {
     max-width: 90%;
-    margin: 0 auto;
+    margin: auto;
+    font-family: Montserrat, sans-serif;
+    background: -webkit-linear-gradient(120deg, #CEEECC, #D2E1A0) no-repeat;
 }
 
 p {
-    font-family: sans-serif;
     font-size: 15px;
+    line-height: 250%;
 }
 
 a {
     padding: 0.25rem 0.125rem 0;
     text-decoration: none;
     border-bottom: 1px solid #003366;
-    transition: all 150ms ease;
 }
 
 a:link {
     color: #6a51e7;
-
 }
 
 a:hover {
@@ -37,10 +37,160 @@ a:active {
     border-bottom: 3px solid blue;
 }
 
-.table {
+.table-container {
+    display: inline-block;
     max-width: 45%;
-    margin: 0 auto;
-    font-size: 160%;
+    margin: 10px;
+    right: 0;
+    font-size: 120%;
+    float: right;
+    padding: 5px;
 
 }
-/* give a slightly greyish colour to the background of the quotations */
+
+table {
+    background-image: linear-gradient(120deg, #F6EBCC, #D68822);
+    color: black;
+    table-layout: fixed;
+    border-collapse: collapse;
+    padding: 10px;
+    border: 3px solid darkolivegreen;
+    margin: 10px;
+    line-height: 200%;
+}
+
+caption {
+    caption-side: bottom;
+}
+
+th {
+    letter-spacing: 2px;
+    text-align: center;
+}
+
+td {
+    letter-spacing: 2px;
+    border: 3px solid darkolivegreen;
+}
+
+tbody td {
+    text-align: center;
+}
+
+tfoot th {
+    text-align: right;
+}
+
+thead th,
+tfoot th,
+tfoot td {
+    background: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0.5));
+    border: 3px solid purple;
+}
+
+blockquote{
+    display: inline-block;
+    width: 45%;
+    margin: 80px auto;
+    background-color: rgba(154,154,154,0.45);
+    border-left: 3px solid rgba(154,54,44,0.83);
+    padding: 30px;
+    border-radius: 5px;
+    font-style: italic;
+    line-height: 200%;
+}
+
+blockquote p::before{
+    content: '\201C';
+}
+
+blockquote p::after {
+    content: '\201D';
+}
+
+q {
+    font-style: italic;
+    padding-left: 5px;
+}
+
+.villagers {
+    border-left: 3px solid blue;
+}
+
+.farmer {
+    border-left: 3px solid brown;
+}
+
+.thefarmer {
+    background: none;
+    color: brown;
+    font-weight: bolder;
+}
+
+.thevillagers {
+    background: none;
+    color: blue;
+    font-weight: bolder;
+}
+
+header > h1 {
+    background: yellow;
+    text-align: center;
+}
+
+.image {
+
+}
+
+mark {
+    background: none;
+}
+
+.good {
+    text-transform: capitalize;
+    color: green;
+}
+
+.bad {
+    text-transform: capitalize;
+    color: red;
+}
+
+.first {
+    font-weight: bold;
+}
+
+img {
+    float: right;
+    width: 45%;
+    height: 45%;
+    margin: 30px;
+    border: 2px solid darkolivegreen;
+    border-radius: 5px;
+    padding: 5px;
+    position: static;
+}
+
+#video {
+    display: inline-block;
+    float: left;
+    border: 2px solid darkolivegreen;
+    padding: 5px;
+    position: relative;
+    margin: 10px;
+}
+
+.story {
+    text-align: justify;
+}
+
+.quote {
+    display: inline-block;
+}
+
+footer {
+    position: static;
+    bottom: 0;
+    text-align: center;
+    background: yellow;
+}
