--- a/main.css
+++ b/main.css
@@ -1,141 +1,145 @@
 body {
-    max-width: 90%;
-    margin: auto;
-    font-family: Montserrat, sans-serif;
-    background: -webkit-linear-gradient(120deg, #CEEECC, #D2E1A0) no-repeat;
+	max-width: 90%;
+	margin: auto;
+	font-family: Montserrat, sans-serif;
+	background: -webkit-linear-gradient(120deg, #CEEECC, #D2E1A0) no-repeat;
 }
 
 p {
-    font-size: 15px;
-    line-height: 250%;
+	font-size: 15px;
+	line-height: 250%;
 }
 
 a {
-    padding: 0.25rem 0.125rem 0;
-    text-decoration: none;
-    border-bottom: 1px solid #003366;
+	padding: 0.25rem 0.125rem 0;
+	text-decoration: none;
+	border-bottom: 1px solid #003366;
 }
 
 a:link {
-    color: #6a51e7;
+	color: #6a51e7;
 }
 
 a:hover {
-    background-color: lightblue;
-    color: #6a51e7;
-    border-bottom: 3px solid blue;
+	background-color: lightblue;
+	color: #6a51e7;
+	border-bottom: 3px solid blue;
 }
 
 a:visited {
-    color: brown;
-    border-bottom: 3px solid darkred;
+	color: brown;
+	border-bottom: 3px solid darkred;
 }
 
 a:active {
-    background-color: lightblue;
-    color: #6a51e7;
-    border-bottom: 3px solid blue;
+	background-color: lightblue;
+	color: #6a51e7;
+	border-bottom: 3px solid blue;
 }
 
 .table-container {
-    display: inline-block;
-    max-width: 45%;
-    margin: 10px;
-    right: 0;
-    font-size: 120%;
-    float: right;
-    padding: 5px;
+	display: inline-block;
+	max-width: 45%;
+	margin: 10px;
+	right: 0;
+	font-size: 120%;
+	float: right;
+	padding: 5px;
 
 }
 
 table {
-    background-image: linear-gradient(120deg, #F6EBCC, #D68822);
-    color: black;
-    table-layout: fixed;
-    border-collapse: collapse;
-    padding: 10px;
-    border: 3px solid darkolivegreen;
-    margin: 10px;
-    line-height: 200%;
+	background-image: linear-gradient(120deg, #F6EBCC, #D68822);
+	color: black;
+	table-layout: fixed;
+	border-collapse: collapse;
+	padding: 10px;
+	border: 3px solid darkolivegreen;
+	margin: 10px;
+	line-height: 200%;
 }
 
 caption {
-    caption-side: bottom;
+	caption-side: bottom;
 }
 
 th {
-    letter-spacing: 2px;
-    text-align: center;
+	letter-spacing: 2px;
+	text-align: center;
 }
 
 td {
-    letter-spacing: 2px;
-    border: 3px solid darkolivegreen;
+	letter-spacing: 2px;
+	border: 3px solid darkolivegreen;
+	padding: 5px;
 }
 
 tbody td {
-    text-align: center;
+	text-align: center;
 }
 
 tfoot th {
-    text-align: right;
+	text-align: right;
 }
 
 thead th,
 tfoot th,
 tfoot td {
-    background: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0.5));
-    border: 3px solid purple;
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5));
+	border: 3px solid purple;
 }
 
-blockquote{
-    display: inline-block;
-    width: 45%;
-    margin: 80px auto;
-    background-color: rgba(154,154,154,0.45);
-    border-left: 3px solid rgba(154,54,44,0.83);
-    padding: 30px;
-    border-radius: 5px;
-    font-style: italic;
-    line-height: 200%;
+blockquote {
+	display: inline-block;
+	width: 45%;
+	margin: 80px auto;
+	background-color: rgba(154, 154, 154, 0.45);
+	border-left: 3px solid rgba(154, 54, 44, 0.83);
+	padding: 30px;
+	border-radius: 5px;
+	font-style: italic;
+	line-height: 200%;
 }
 
-blockquote p::before{
-    content: '\201C';
+blockquote p::before {
+	content: '\201C';
 }
 
 blockquote p::after {
-    content: '\201D';
+	content: '\201D';
 }
 
 q {
-    font-style: italic;
-    padding-left: 5px;
+	font-style: italic;
+	padding-left: 5px;
 }
 
 .villagers {
-    border-left: 3px solid blue;
+	border-left: 3px solid blue;
 }
 
 .farmer {
-    border-left: 3px solid brown;
+	border-left: 3px solid brown;
 }
 
 .thefarmer {
-    background: none;
-    color: brown;
-    font-weight: bolder;
+	background: none;
+	color: brown;
+	font-weight: bolder;
 }
 
 .thevillagers {
-    background: none;
-    color: blue;
-    font-weight: bolder;
+	background: none;
+	color: blue;
+	font-weight: bolder;
 }
 
 header > h1 {
-    background: yellow;
-    text-align: center;
+	background: yellow;
+	text-align: center;
+	font-weight: bold;
+	font-size: 35px;
+	padding: 5px;
 }
 
 .image {
@@ -143,54 +147,60 @@ header > h1 {
 }
 
 mark {
-    background: none;
+	background: none;
 }
 
 .good {
-    text-transform: capitalize;
-    color: green;
+	text-transform: capitalize;
+	color: green;
 }
 
 .bad {
-    text-transform: capitalize;
-    color: red;
+	text-transform: capitalize;
+	color: red;
 }
 
 .first {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 img {
-    float: right;
-    width: 45%;
-    height: 45%;
-    margin: 30px;
-    border: 2px solid darkolivegreen;
-    border-radius: 5px;
-    padding: 5px;
-    position: static;
+	float: right;
+	width: 45%;
+	height: 45%;
+	margin: 30px;
+	border: 2px solid darkolivegreen;
+	border-radius: 5px;
+	padding: 5px;
+	position: static;
 }
 
 #video {
-    display: inline-block;
-    float: left;
-    border: 2px solid darkolivegreen;
-    padding: 5px;
-    position: relative;
-    margin: 10px;
+	display: inline-block;
+	float: left;
+	border: 2px solid darkolivegreen;
+	padding: 5px;
+	position: relative;
+	margin: 10px;
 }
 
 .story {
-    text-align: justify;
+	text-align: justify;
 }
 
 .quote {
-    display: inline-block;
+	display: inline-block;
 }
 
 footer {
-    position: static;
-    bottom: 0;
-    text-align: center;
-    background: yellow;
+	position: static;
+	bottom: 0;
+	text-align: center;
+	background: yellow;
+	padding: 5px;
+	word-spacing: 5px;
+}
+
+.preamble {
+	display: inline-block;
 }
